# vitte

./: .cirrus.yml  .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .vitte-hash-2.cpp  =  ARCHITECTURE.md  ARCHITECTURE_COMPLETE.md  ARCHITECTURE_INDEX.md  AUDIT.md  BENCHMARK_GUIDE.md  BUILD_INFRASTRUCTURE_INDEX.md  BUILD_LANGUAGE_INTEGRATION.md  CHANGELOG.md  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  COMPILER_ANALYSIS.md  COMPILER_CLI_PHASE1_README.md  COMPILER_GRAMMAR_ALIGNMENT_ANALYSIS.md  COMPILER_GRAMMAR_ALIGNMENT_INTEGRATION.md  COMPILER_GRAMMAR_ALIGNMENT_ROADMAP.md  COMPILER_ROADMAP.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  DEBIAN_BUILD_GUIDE.md  DEBIAN_BUILD_GUIDE_I686.md  DEBIAN_BUILD_I686_INDEX.md  DEBIAN_BUILD_SUMMARY.txt  DEBIAN_BUILD_SUMMARY_I686.txt  DELIVERY_SUMMARY.md  DESIGN.md  DEVELOPER_GUIDE.md  DOCUMENTATION_ROADMAP.md  FILE_INVENTORY.md  GETTING_STARTED.md  GITHUB_BACKLOG.md  (+80 more)
bench/: CMakeLists.txt  C_H_FILES_REFERENCE.md  README.md
bench/micro/: bench_backend_c.c  bench_lexer.c  bench_pal_fs.c  bench_parser.c
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: e2e_pipeline.rs  end_to_end.rs  incremental_parser.rs  ir_passes.rs  lexer.rs  parser.rs  run_source.rs  vm_hotpath.rs  vm_micro.rs
benchmarks/macro/: scenarios.json
benchmarks/micro/: Cargo.toml
benchmarks/perf/: README.md
benchmarks/repl-lsp/: budgets.json
benchmarks/scripts/: capture-env.sh  compare.py  prepare.sh
bootstrap/stage0/: CMakeLists.txt  main.c  vitte_ast.c  vitte_ast.h  vitte_compiler.c  vitte_compiler.h  vitte_lexer.c  vitte_lexer.h
compiler/: .gitignore  ASSEMBLY_FEATURES.md  ASSEMBLY_IMPLEMENTATION.md  BUILD_AND_TEST.md  BUILD_INTEGRATION.md  CHANGELOG.md  CMakeLists.txt  CMakeLists_full.txt  CODE_OF_CONDUCT.md  COMPILER_FILES.md  COMPLETION_REPORT.md  CONTRIBUTING.md  CREATION_RESUME.md  DELIVERY_REPORT.md  DOCUMENTATION_INDEX.md  FINAL_CHECKLIST.md  GOVERNANCE.md  IMPLEMENTATION_STATUS.md  Makefile  NOTICE  QUICK_START.md  README.md  README_ASSEMBLY.md  README_IMPLEMENTATION.md  SECURITY.md  SHA256SUMS.txt  START_HERE.txt  SUPPORT.md  SYSTEM_OVERVIEW.md  THIRD_PARTY.md  driver.vitte  mod.muf  test_examples.sh  verify_implementation.sh
compiler/.github/: PULL_REQUEST_TEMPLATE.md
compiler/bench/: CMakeLists.txt  README.md
compiler/build_bench_asm/: CTestTestfile.cmake
compiler/build_dbg/: CTestTestfile.cmake
compiler/cli/: .vitteconfig  CLI_DOCUMENTATION.md  CMakeLists.txt  COMPLETION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  MASTER.md  QUICKSTART.md  README.md  build.vitte  cli.c  cli.h  cli_commands.c  cli_commands.h  cli_examples.c  cmd_build.vitte  cmd_check.vitte  cmd_clean.vitte  colors.vitte  commands.vitte  config.c  config.h  help.vitte  lc_common.vitte  main.c  main.vitte  mod.muf  steel_cmd_clean.c  steel_cmd_doc.c  steel_cmd_fmt.c  steel_cmd_pkg.c  steel_cmd_run.c  steel_cmd_test.c  steel_main.c  steelc_driver.c  steelc_front.c  steelc_main.c  tests.vitte  version.vitte  (+1 more)
compiler/common/: atomics.c  fs.c  hashmap.c  log.c  os.c  path.c  utf8.c  vec.c
compiler/compiler/: hir_build.c  interner.c  ir_build.c  lexer.c  passes.c  symtab.c  typecheck.c
compiler/diag/: codes.c  diag.c  span.c
compiler/docs/: ASSEMBLY_README.md  DOCUMENTATION_INDEX.md  architecture.md  assembly_integration.md  assembly_patterns.md  assembly_quick_reference.md  assembly_testing.md  diagnostics.md  inline_assembly.md  pipeline.md  targets.md
compiler/examples/: README.md  arithmetic.vitte  asm_c_interop.vitte  asm_performance.vitte  control.vitte  fibonacci.vitte  functions.vitte  hello.vitte  hybrid_vector_library.vitte  inline_asm.vitte  structs.vitte  types.vitte
compiler/frontend/: CMakeLists.txt  FRONTEND.md  ast.vitte  bt_ast.vitte  bt_diagnostics.vitte  bt_span.vitte  bt_tokens.vitte  diagnostics.vitte  front_tolerant.vitte  lexer.c  lexer.h  lexer.vitte  parser.c  parser.h  parser.vitte  reporter.vitte  resolve.vitte  resolve_index_utils.vitte  semantic.c  semantic.h  span.vitte  symbol.vitte  test_frontend.c  tokens.vitte
compiler/fuzz/: README.md  lex_numbers.vitte  lex_token_dense.vitte  manifest.json  parse_deep_blocks.vitte  path_edges.vitte  unicode.vitte  unicode_idents.vitte
compiler/include/: compiler.h
compiler/ir/: builder.vitte  dep_graph.vitte  dump.vitte  ir.vitte  ir_opt.vitte  lowering.vitte
compiler/runtime/: rt_alloc.c  rt_string.c
compiler/scripts/: build.sh  run_tests.sh
compiler/sema/: typecheck.vitte
fuzz/: Cargo.toml  README.md
modules/: Cargo.toml  mathx.vitte  metrics.vitte  migrate.vitte  pagination.vitte  plugin.vitte  pool.vitte  prioq.vitte  random.vitte  rate_limiter.vitte  result_ext.vitte  retry.vitte  rle.vitte  scheduler.vitte  stringx.vitte  supervisor.vitte  taskpool.vitte  tracing.vitte  util.vitte  uuid.vitte  validate.vitte  yaml_lite.vitte
runtime/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  MANIFEST.md  README.md  build.sh
rust/: Cargo.toml  README.md  cbindgen.toml
src/: Cargo.toml  README.md  lib.rs  main.c  main.rs  main.vit  mod.muf  repl.rs  stage0
std/: Cargo.toml  LICENSE  README.md  mod.muf  muffin.muf  vitte.toml
tests/: Cargo.toml  access_ops.vit  cast_is.vit  cli_color_integration_test.py  core_semantic_entry_success_manifest.txt  core_semantic_imports_success_manifest.txt  core_semantic_match_success_manifest.txt  core_semantic_resolve_success_manifest.txt  core_semantic_returns_success_manifest.txt  core_semantic_share_success_manifest.txt  core_semantic_success_manifest.txt  cross_package_http_process_log_fs_smoke.vit  diag_json_output_test.py  exprs.vit  generic_empty.vit  global_decl.vit  grammar.vit  hir_fixture_select.vit  loops.vit  macro_decl.vit  net_timeouts.vit  patterns.vit  patterns_ok.vit  pipeline_tests.vit  proc_expr.vit  std_core_io_error.vit  std_core_option.vit  std_core_panic.vit  std_core_result.vit  stdlib_async.vit  stdlib_bridge.vit  stdlib_cli.vit  stdlib_crypto.vit  stdlib_db.vit  stdlib_env.vit  stdlib_fs.vit  stdlib_fswatch.vit  stdlib_http.vit  stdlib_json.vit  stdlib_log.vit  (+22 more)
(+23122 files in other folders)
