# vitte/Cargo.toml — racine du workspace

[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["docs"]

default-members = [
  "crates/vitte-analyzer",
  "crates/vitte-ansi",
  "crates/vitte-args",
  "crates/vitte-asm",
  "crates/vitte-asset",
  "crates/vitte-ast",
  "crates/vitte-async",
  "crates/vitte-autocompletion",
  "crates/vitte-autodiff",
  "crates/vitte-backend-cranelift",
  "crates/vitte-backend-llvm",
  "crates/vitte-banner",
  "crates/vitte-bench",
  "crates/vitte-book",
  "crates/vitte-borrowck",
  "crates/vitte-build",
  "crates/vitte-buildkit",
  "crates/vitte-c-abi",
  "crates/vitte-c",
  "crates/vitte-cache",
  "crates/vitte-cap",
  "crates/vitte-channel",
  "crates/vitte-cli",
  "crates/vitte-clippy",
  "crates/vitte-codegen-aarch64",
  "crates/vitte-codegen-rv64",
  "crates/vitte-codegen-wasm64",
  "crates/vitte-codegen-x86_64",
  "crates/vitte-codegen",
  "crates/vitte-collections",
  "crates/vitte-compiler",
  "crates/vitte-completion",
  "crates/vitte-compress",
  "crates/vitte-config",
  "crates/vitte-consteval",
  "crates/vitte-core",
  "crates/vitte-cov",
  "crates/vitte-crash",
  "crates/vitte-cross",
  "crates/vitte-crypto",
  "crates/vitte-cxx",
  "crates/vitte-dap",
  "crates/vitte-debugger",
  "crates/vitte-diag",
  "crates/vitte-dist-runner",
  "crates/vitte-doc",
  "crates/vitte-docgen",
  "crates/vitte-dotnet",
  "crates/vitte-ecs",
  "crates/vitte-embed",
  "crates/vitte-encoding-detect",
  "crates/vitte-encoding",
  "crates/vitte-errors",
  "crates/vitte-examples",
  "crates/vitte-ffi-sys",
  "crates/vitte-ffi",
  "crates/vitte-flow",
  "crates/vitte-fmt",
  "crates/vitte-fronted-cpp",
  "crates/vitte-fronted-jvm",
  "crates/vitte-fronted-llvm",
  "crates/vitte-fronted-wasm",
  "crates/vitte-frontend",
  "crates/vitte-fs",
  "crates/vitte-fuzz",
  "crates/vitte-gc",
  "crates/vitte-go",
  "crates/vitte-golden",
  "crates/vitte-gpu",
  "crates/vitte-gui",
  "crates/vitte-harness",
  "crates/vitte-haskell",
  "crates/vitte-help",
  "crates/vitte-hir",
  "crates/vitte-http",
  "crates/vitte-i18n",
  "crates/vitte-incremental",
  "crates/vitte-input",
  "crates/vitte-install",
  "crates/vitte-io",
  "crates/vitte-ir",
  "crates/vitte-java",
  "crates/vitte-js",
  "crates/vitte-julia",
  "crates/vitte-key",
  "crates/vitte-kotlin",
  "crates/vitte-lexer",
  "crates/vitte-linalg",
  "crates/vitte-linker",
  "crates/vitte-lint",
  "crates/vitte-loader",
  "crates/vitte-logger",
  "crates/vitte-logs",
  "crates/vitte-lsp",
  "crates/vitte-lto",
  "crates/vitte-macro",
  "crates/vitte-man",
  "crates/vitte-math",
  "crates/vitte-matlab",
  "crates/vitte-metrics",
  "crates/vitte-net",
  "crates/vitte-new",
  "crates/vitte-node",
  "crates/vitte-opt",
  "crates/vitte-package",
  "crates/vitte-packager",
  "crates/vitte-parallel",
  "crates/vitte-parser",
  "crates/vitte-path",
  "crates/vitte-pattern",
  "crates/vitte-pgo",
  "crates/vitte-php",
  "crates/vitte-playground",
  "crates/vitte-plugin",
  "crates/vitte-policy",
  "crates/vitte-prof",
  "crates/vitte-profiler",
  "crates/vitte-progress",
  "crates/vitte-project",
  "crates/vitte-prompt",
  "crates/vitte-python",
  "crates/vitte-r",
  "crates/vitte-rand",
  "crates/vitte-readline",
  "crates/vitte-regalloc",
  "crates/vitte-regex",
  "crates/vitte-registry",
  "crates/vitte-remote-cache",
  "crates/vitte-repl",
  "crates/vitte-repro",
  "crates/vitte-ruby",
  "crates/vitte-runtime",
  "crates/vitte-sandbox",
  "crates/vitte-sanitizers",
  "crates/vitte-scheduler",
  "crates/vitte-secrets",
  "crates/vitte-semantic",
  "crates/vitte-semver",
  "crates/vitte-serde",
  "crates/vitte-shell",
  "crates/vitte-simd",
  "crates/vitte-snapshot",
  "crates/vitte-spinner",
  "crates/vitte-static",
  "crates/vitte-stats",
  "crates/vitte-stdlib",
  "crates/vitte-string",
  "crates/vitte-style",
  "crates/vitte-swift",
  "crates/vitte-sym",
  "crates/vitte-syntax",
  "crates/vitte-sys",
  "crates/vitte-table",
  "crates/vitte-task",
  "crates/vitte-template",
  "crates/vitte-term",
  "crates/vitte-test",
  "crates/vitte-threads",
  "crates/vitte-tls",
  "crates/vitte-tools",
  "crates/vitte-trace",
  "crates/vitte-tree",
  "crates/vitte-typer",
  "crates/vitte-unicode",
  "crates/vitte-updater",
  "crates/vitte-verify",
  "crates/vitte-vitbc",
  "crates/vitte-vm",
  "crates/vitte-wasm",
]


[workspace.package]
edition      = "2021"
version      = "0.1.0"
license      = "Apache-2.0"
repository   = "https://github.com/vitte-lang/vitte"
homepage     = "https://vitte-lang.github.io/vitte/"
readme       = "README.md"
rust-version = "1.82.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
module_name_repetitions = "allow"
too_many_lines = "allow"
doc_markdown = "allow"

[workspace.dependencies]
# Base
serde                 = { version = "1", default-features = false, features = ["derive"] }
serde_json            = "1"
thiserror             = "2.0.17"
anyhow                = "1"
bitflags              = "2"
smallvec              = "1"
indexmap              = "2"
petgraph              = "0.8.3"

# CLI / DX
clap                  = { version = "4", features = ["derive"] }
clap_complete         = "4"
tracing               = { version = "0.1", features = ["attributes", "log", "release_max_level_info"] }
tracing-subscriber    = { version = "0.3", features = ["env-filter", "fmt", "ansi", "time"] }
owo-colors            = { version = "4", features = ["supports-colors"] }

# Logging
log                   = "0.4"
env_logger            = { version = "0.11", default-features = false, features = ["auto-color"] }

# Async / LSP / runtime
tokio                 = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "net", "sync", "fs"] }
tower-lsp             = "0.20"
notify                = "6"

# Bytecode / I/O
byteorder             = "1"
crc32fast             = "1"
lz4_flex              = "0.11"
zstd                  = { version = "0.13", default-features = false }
memmap2               = "0.9"
bumpalo               = "3"

# Concurrence / perfs
rayon                 = "1"
crossbeam-channel     = "0.5"
parking_lot           = "0.12"
dashmap               = "5"

# WASM
wasm-bindgen          = "0.2"
wasm-bindgen-futures  = "0.4"
js-sys                = "0.3"
web-sys               = { version = "0.3", features = [
  "Window","Response","Request","RequestInit","RequestMode","Headers","Console","Performance"
] }

# Outils dev/test
pretty_assertions     = "1"
proptest              = "1"
insta                 = { version = "1", features = ["yaml"] }
tempfile              = "3"

# Build utils
dirs-next             = "2"

# Binary serialization
bincode               = { version = "1.3", default-features = false }
postcard              = { version = "1", default-features = false, features = ["alloc"] }

# Stdlib exposée
vitte-stdlib          = { path = "crates/vitte-stdlib", version = "0.1.0" }

[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = 0
